--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
 
   <!-- Right section (1/4 of screen) -->
 	<!-- Main Buttons -->
-	<div class="w-full grid grid-cols-5 justify-between gap-4 bg-gray-800 p-4 rounded-lg mt-6 absolute bottom-0">
+	<div class="w-full grid grid-cols-5 justify-between gap-4 bg-gray-800 p-4 rounded-lg mt-6 fixed bottom-0 left-0 z-50">
 	<div class="grid grid-cols-1 mt-6 gap-4 w-full">
 		<button onclick="playAudio('static/special_music/{{ timeout_song }}')"
 			class="bg-yellow-500 rounded-lg hover:bg-yellow-700 text-xl px-5 py-5">
