--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         <div class="flex flex-col space-y-2">
           {% for song in categories.ass_angriff %}
           <button onclick="playAudio('static/music/{{ song.name }}')"
-            class="px-8 py-4 text-lg rounded-lg hover:opacity-80 w-full bg-blue-600">
+            class="px-4 py-2 text-lg rounded-lg hover:opacity-80 w-full bg-blue-600">
             {{ song.icon }} {{ song.display_name }}
           </button>
           {% endfor %}
@@ -74,7 +74,7 @@
 		  <div class="flex flex-col space-y-2">
 			{% for song in categories.block %}
 			<button onclick="playAudio('static/music/{{ song.name }}')"
-			  class="px-8 py-4 text-lg rounded-lg hover:opacity-80 w-full bg-yellow-600">
+			  class="px-4 py-2 text-lg rounded-lg hover:opacity-80 w-full bg-pink-600">
 			  {{ song.icon }} {{ song.display_name }}
 			</button>
 			{% endfor %}
@@ -85,7 +85,7 @@
           <div class="flex flex-col space-y-2">
             {% for song in categories.gegner %}
             <button onclick="playAudio('static/music/{{ song.name }}')"
-              class="px-8 py-4 text-lg rounded-lg hover:opacity-80 w-full bg-red-600">
+              class="px-4 py-2 text-lg rounded-lg hover:opacity-80 w-full bg-red-600">
               {{ song.icon }} {{ song.display_name }}
             </button>
             {% endfor %}
@@ -96,7 +96,7 @@
         <div class="flex flex-col space-y-2">
           {% for song in categories.sonstiges %}
           <button onclick="playAudio('static/music/{{ song.name }}')"
-            class="px-8 py-4 text-lg rounded-lg hover:opacity-80 w-full bg-green-600">
+            class="px-4 py-2 text-lg rounded-lg hover:opacity-80 w-full bg-green-600">
             {{ song.icon }} {{ song.display_name }}
           </button>
           {% endfor %}
@@ -108,7 +108,7 @@
         <div class="flex flex-col space-y-2">
           {% for song in categories.spass %}
           <button onclick="playAudio('static/music/{{ song.name }}')"
-            class="px-8 py-4 text-lg rounded-lg hover:opacity-80 w-full bg-green-600">
+            class="px-4 py-2 text-lg rounded-lg hover:opacity-80 w-full bg-purple-600">
             {{ song.icon }} {{ song.display_name }}
           </button>
           {% endfor %}
@@ -119,36 +119,36 @@
 
   <!-- Right section (1/4 of screen) -->
 	<!-- Main Buttons -->
-	<div class="w-full grid grid-cols-5 justify-between gap-4 bg-gray-800 p-4 rounded-lg mt-6 fixed bottom-0 left-0 z-50">
-	<div class="grid grid-cols-1 mt-6 gap-4 w-full">
+	<div class="w-full grid grid-cols-5 justify-between gap-4 bg-gray-800 p-4 rounded-lg mt-2 fixed bottom-0 left-0 z-50">
+	<div class="grid grid-cols-1 mt-4 gap-4 w-full">
 		<button onclick="playAudio('static/special_music/{{ timeout_song }}')"
-			class="bg-yellow-500 rounded-lg hover:bg-yellow-700 text-xl px-5 py-5">
+			class="bg-yellow-500 rounded-lg hover:bg-yellow-700 text-xl px-3 py-3">
 			Timeout ⌚ 
 		</button>
 		<button onclick="playAudio('static/special_music/{{ walkon_song }}')"
-			class="bg-blue-500 rounded-lg hover:bg-blue-700 text-xl px-5 py-5">
+			class="bg-blue-500 rounded-lg hover:bg-blue-700 text-xl px-3 py-3">
 			Walk-On 🎤
 		</button>
 	</div>
-	<div class="grid grid-cols-1 mt-6 gap-4 w-full">
+	<div class="grid grid-cols-1 mt-4 gap-4 w-full">
 		<button onclick="playAudio('static/special_music/{{ long_song_1.name }}')"
-			class="bg-orange-500 rounded-lg hover:bg-yellow-700 text-xl px-5 py-5">
+			class="bg-orange-500 rounded-lg hover:bg-yellow-700 text-xl px-3 py-3">
 			{{ long_song_1.display_name }} {{ long_song_1.icon }}
 		</button>
 		<button onclick="playAudio('static/special_music/{{ long_song_2.name }}')"
-			class="bg-orange-500 rounded-lg hover:bg-blue-700 text-xl px-5 py-5">
+			class="bg-orange-500 rounded-lg hover:bg-blue-700 text-xl px-3 py-3">
 			{{ long_song_2.display_name }} {{ long_song_2.icon }}
 		</button>
 	</div>
 	<div class="px-10 py-10 flex flex-col items-center w-full">
 	</div>
-	<button onclick="stopAudio()" class="px-10 py-10 bg-red-600 rounded-lg hover:bg-red-800 text-lg">
+	<button onclick="stopAudio()" class="px-7 py-7 bg-red-600 rounded-lg hover:bg-red-800 text-lg">
 		Stop ⏹
 	</button>
-	<div class="px-10 py-10 flex flex-col items-center bottom-0 w-full">
+	<div class="px-7 py-7 flex flex-col items-center bottom-0 w-full">
 		<label for="volume" class="mb-1 text-lg text-center">🔊</label>
 		<input type="range" id="volume" min="0" max="1" step="0.05" value="1.0"
-			class="horizontal-slider w-64"
+			class="horizontal-slider w-full"
 			oninput="setVolume(this.value)">
 	</div>
 	</div>
